# agentbrush

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md
docs/examples/: background_removal.md  mug_pipeline.md  pod_workflows.md  social_media_images.md  sticker_pipeline.md  tshirt_pipeline.md
docs/presets/: pod.md
fonts/: OFL.txt
skill/agent-brush/: SKILL.md
skill/agent-brush/references/: product-specs.md  troubleshooting.md
skill/agent-brush/scripts/: add_text.py  border_cleanup.py  composite.py  convert.py  generate.py  greenscreen.py  remove_bg.py  resize.py  validate.py
src/agentbrush/: __init__.py  __main__.py  cli.py
src/agentbrush/background/: __init__.py  cli.py  ops.py
src/agentbrush/batch/: __init__.py  cli.py  ops.py
src/agentbrush/border/: __init__.py  cli.py  ops.py
src/agentbrush/composite/: __init__.py  cli.py  ops.py
src/agentbrush/convert/: __init__.py  cli.py  ops.py
src/agentbrush/core/: __init__.py  alpha.py  color.py  connectivity.py  flood_fill.py  fonts.py  geometry.py  result.py
src/agentbrush/crop/: __init__.py  cli.py  ops.py
src/agentbrush/diff/: __init__.py  cli.py  ops.py
src/agentbrush/generate/: __init__.py  cli.py  ops.py
tests/: conftest.py  test_background.py  test_batch.py  test_border.py  test_cli.py  test_composite.py  test_convert.py  test_core_connectivity.py  test_core_flood_fill.py  test_core_fonts.py  test_core_geometry.py  test_crop.py  test_diff.py  test_generate.py  test_greenscreen.py  test_palette.py  test_resize.py  test_text.py  test_validate.py
(+15 files in other folders)
